--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,44 +1,26 @@
-<footer class="site-footer">
+<nav class="navbar fixed-bottom navbar-inverse bg-inverse">
+    <a class="navbar-brand" href="http://www.applied-ai.solutions">&copy; 2017 Applied Artificial Intelligence</a>
+    <!--<div class="collapse navbar-collapse" id="navbarText">-->
+        <!--<a href="mailto:{{ site.email }}">{{ site.email }}</a>-->
+            <!--{% include icon-github.html username=site.github_username %}-->
+    <!--</div>-->
+</nav>
 
-  <div class="wrapper">
+<!--<footer class="site-footer">-->
+<!--<div class="wrapper">-->
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>
-            {% if site.author %}
-              {{ site.author | escape }}
-            {% else %}
-              {{ site.title | escape }}
-            {% endif %}
-            </li>
-            {% if site.email %}
-            <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {% endif %}
-        </ul>
-      </div>
+<!--<div class="footer-col-wrapper">-->
+<!--<div class="footer-col footer-col-1">-->
+<!--</div>-->
 
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
+<!--<div class="footer-col footer-col-2">-->
 
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
+<!--</div>-->
+<!--<div class="footer-col footer-col-3">-->
+<!--<p>{{ site.description | escape }}</p>-->
+<!--</div>-->
+<!--</div>-->
 
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
-      </div>
-    </div>
+<!--</div>-->
 
-  </div>
-
-</footer>
+<!--</footer>-->
