--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,58 @@
-<header class="site-header" role="banner">
+<nav class="navbar navbar-toggleable-md fixed-top navbar-inverse bg-inverse">
 
-  <div class="wrapper">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <a class="navbar-brand page-scroll" href="#page-top">
+        {{ site.title | escape }}
+    </a>
 
-    <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    {#
+    <!--<div class="collapse navbar-collapse" id="collapsing-navbar">#}-->
+        <!--<ul class="nav navbar-nav">-->
+            <!--&lt;!&ndash; Hidden li included to remove active class from about link when scrolled up past about section &ndash;&gt;-->
+            <!--<li class="nav-item hidden">-->
+                <!--<a class="page-scroll" href="#page-top"></a>-->
+            <!--</li>-->
+            <!--<li class="nav-item">-->
+                <!--<a class="nav-link  page-scroll" href="#about">About</a>-->
+            <!--</li>-->
+            <!--<li class="nav-item">-->
+                <!--<a class="nav-link page-scroll" href="#services">Services</a>-->
+            <!--</li>-->
+            <!--<li class="nav-item">-->
+                <!--<a class="nav-link page-scroll" href="#contact">Contact</a>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
 
-    <nav class="site-nav">
-      <span class="menu-icon">
-        <svg viewBox="0 0 18 15" width="18px" height="15px">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </span>
+</nav>
+<!--<div class="wrapper">-->
 
-      <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
+<!--<a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>-->
 
-  </div>
+<!--<nav class="site-nav">-->
+<!--<span class="menu-icon">-->
+<!--<svg viewBox="0 0 18 15" width="18px" height="15px">-->
+<!--<path fill="#424242"-->
+<!--d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>-->
+<!--<path fill="#424242"-->
+<!--d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>-->
+<!--<path fill="#424242"-->
+<!--d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>-->
+<!--</svg>-->
+<!--</span>-->
 
-</header>
+<!--<div class="trigger">-->
+<!--{% for my_page in site.pages %}-->
+<!--{% if my_page.title %}-->
+<!--<a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>-->
+<!--{% endif %}-->
+<!--{% endfor %}-->
+<!--</div>-->
+<!--</nav>-->
+
+<!--</div>-->
+
+
