--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-    <a class="navbar-brand page-scroll" href="#page-top">
+    <a class="navbar-brand page-scroll" href="{{ site.url }}">
         {{ site.title | escape }}
     </a>
 
