--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,24 +2,19 @@
 layout: default
 ---
 
-<div class="home">
-
-    <h1 class="page-heading">Posts</h1>
-
-    {{ content }}
-
-    <ul class="post-list">
-        {% for post in site.posts %}
-        <li>
-            <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-
-            <h2>
-                <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-            </h2>
-        </li>
-        {% endfor %}
-    </ul>
-
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <h3>Agenda</h3>
+            {% for post in site.posts %}
+            <h4>
+                <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+            </h4>
+            {% endfor %}
+        </div>
+        <div class="col-8">
+            {{ content }}
+        </div>
+    </div>
 
 </div>
