--- a/base.css
+++ b/base.css
@@ -23,7 +23,7 @@ body {
     font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
     color: #001A33;
     background-color: #F5F5F5;
-    padding: 0 0 1.875rem;
+    padding: 6rem 0 1.875rem;
 }
 
 @media (min-width: 34em) {
