--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,11 +7,11 @@
     <meta name="description"
           content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
-    <!--<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="{{ "/assets/syntax.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/base.css" | relative_url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "
     /feed.xml" | relative_url }}">
 
