--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,30 +1,12 @@
 <nav class="navbar navbar-toggleable-md fixed-top navbar-inverse bg-inverse">
 
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <a class="navbar-brand page-scroll" href="{{ site.url }}">
         {{ site.title | escape }}
     </a>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <!--<div class="collapse navbar-collapse" id="collapsing-navbar">#}-->
-        <!--<ul class="nav navbar-nav">-->
-            <!--&lt;!&ndash; Hidden li included to remove active class from about link when scrolled up past about section &ndash;&gt;-->
-            <!--<li class="nav-item hidden">-->
-                <!--<a class="page-scroll" href="#page-top"></a>-->
-            <!--</li>-->
-            <!--<li class="nav-item">-->
-                <!--<a class="nav-link  page-scroll" href="#about">About</a>-->
-            <!--</li>-->
-            <!--<li class="nav-item">-->
-                <!--<a class="nav-link page-scroll" href="#services">Services</a>-->
-            <!--</li>-->
-            <!--<li class="nav-item">-->
-                <!--<a class="nav-link page-scroll" href="#contact">Contact</a>-->
-            <!--</li>-->
-        <!--</ul>-->
-    <!--</div>-->
-
 </nav>
 
