--- a/assets/base.css
+++ b/assets/base.css
@@ -20,12 +20,11 @@ body {
 }
 
 body {
-    margin: 0;
     font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
     color: #001A33;
     background-color: #F5F5F5;
     padding: 6rem 0;
-    margin-bottom: 6rem;
+    margin: 0 0 12rem;
 }
 
 
