--- a/assets/base.css
+++ b/assets/base.css
@@ -23,8 +23,8 @@ body {
     font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
     color: #001A33;
     background-color: #F5F5F5;
-    padding: 6rem 0;
-    margin: 0 0 12rem;
+    /*padding: 6rem 0;*/
+    /*margin: 0 0 12rem;*/
 }
 
 
