--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="{{ "/assets/syntax.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/base.css" | relative_url }}">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "
-    /feed.xml" | relative_url }}">
-    /feed.xml" | relative_url }}">
+    <!--<link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">-->
 
     {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
