--- a/assets/base.css
+++ b/assets/base.css
@@ -23,7 +23,7 @@ body {
     font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
     color: #001A33;
     background-color: #F5F5F5;
-    padding: 6rem 0;
+    padding: 6rem 0 12rem;
 }
 
 
